--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9903,12 +9903,12 @@ h4, h5, h6 {
 }
 
 .bg-appointment {
-  background: linear-gradient(rgba(55, 55, 63, 0.7), rgba(55, 55, 63, 0.7)), url(../img/carousel-1.jpg), no-repeat center center;
+  background: linear-gradient(rgba(55, 55, 63, 0.7), rgba(55, 55, 63, 0.7)), url(/img/cour-appel.jpg), no-repeat center center;
   background-size: cover;
 }
 
 .bg-action {
-  background: linear-gradient(rgba(55, 55, 63, 0.7), rgba(55, 55, 63, 0.7)), url(../img/carousel-2.jpg), no-repeat center center;
+  background: linear-gradient(rgba(55, 55, 63, 0.7), rgba(55, 55, 63, 0.7)), url(/img/colonnes-grecques.jpg), no-repeat center center;
   background-size: cover;
 }
 
